// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1500}
      createdAt={0}
      description="rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={-345600000}
      description="water bill"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={2500}
      createdAt={345600000}
      description="jacket"
      id="3"
      key="3"
      note="winter jacket"
    />
  </div>
</div>
`;

exports[`should test expense list with empty expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
